--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,9 @@
     <div class="signin"> 
       <div class="content"> 
         <h2>Sign In</h2> 
-
+        <p style="font-size: 12px; color: #888;">Created by: Bishesh Dulal</p>
+        <p style="font-size: 12px; color: #888;">Hint: Some paths are only for the chosen ones...</p>
+        
         <form method="POST" class="form"> 
           <div class="inputBox"> 
             <input type="text" name="username" required> <i>Username</i> 
