--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,8 @@
 <head> 
   <meta charset="UTF-8"> 
   <title>Login | SQLi Admin Panel</title> 
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="{{ url_for('serve_static', filename='style.css') }}">
+
 </head> 
 
 <body>
