--- a/templates/panel.html
+++ b/templates/panel.html
@@ -45,6 +45,7 @@
       width: 300px;
     }
   </style>
+<link rel="stylesheet" href="{{ url_for('serve_static', filename='style.css') }}">
 </head>
 <body>
   <div class="flag-container">
