--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -66,6 +66,7 @@
       color: #99ff99;
     }
   </style>
+<link rel="stylesheet" href="{{ url_for('serve_static', filename='style.css') }}">
 </head>
 <body>
   <div class="container">
